--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "parcel serve ./src/index.html",
     "sync": "ts-node ./back-src/db/sync.ts",
-    "build": "parcel build ./front-src/index.html",
+    "build": "parcel build ./src/index.html",
     "start": "node ./back-dist/developing.js"
   },
   "dependencies": {
@@ -23,7 +23,7 @@
     "typescript": "^4.5.5"
   },
   "engines": {
-    "node": "v16.18.1",
+    "node": "v18.12.1",
     "npm": "6.14.15"
   },
   "devDependencies": {
