--- a/package.json
+++ b/package.json
@@ -22,8 +22,15 @@
     "tsc": "^2.0.4",
     "typescript": "^4.5.5"
   },
+  "targets": {
+    "default": {
+      "engines": {
+        "browsers": ">= 50%"
+      }
+    }
+  },
   "engines": {
-    "node": "v16.18.1",
+    "node": "v18.12.1",
     "npm": "6.14.15"
   },
   "devDependencies": {
