--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "parcel serve ./src/index.html",
-    "sync": "ts-node ./back-src/db/sync.ts",
-    "build": "parcel build ./src/index.html",
-    "start": "node ./back-dist/developing.js"
+    "build": "parcel build ./src/index.html && tsc index.ts",
+    "start": "node index.js"
   },
   "dependencies": {
     "@sendgrid/mail": "^7.6.2",
@@ -15,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^14.2.0",
     "dropzone": "^6.0.0-beta.2",
+    "express": "^4.18.2",
     "mapbox": "^1.0.0-beta10",
     "mapbox-gl": "^2.11.1",
     "parcel": "^2.2.0",
